# staticSiteGenerator

./: README.md  main.sh  pyproject.toml  test.sh  tox.ini
src/: gencontent.py  htmlnode.py  inline_markdown.py  main.py  markdown_blocks.py  test_htmlnode.py  test_inline_markdown.py  test_markdown_blocks.py  test_textnode.py  textnode.py
static/: index.css
