[tool.poetry]
name = "staticSiteGenerator"
version = "0.1.0"
description = "Boot.dev - Static Site Generator"
authors = ["Aito Nakajima <gmskazi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
